--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/darkBackground"
-    tools:context=".view.home.HomeActivity">
+    tools:context=".screens.main.MainActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -30,19 +30,18 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler"
+            android:id="@+id/rvCoinsList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layoutAnimation="@anim/layout_animation_fall_down"
-            app:layout_constraintBottom_toBottomOf="@id/container"
             app:layout_constraintTop_toBottomOf="@id/toolbar" />
-
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <android.support.constraint.Group
         android:id="@+id/gNoInternet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         app:constraint_referenced_ids="ivError,tvError" />
 
     <ImageView
@@ -79,5 +78,4 @@
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="parent" />
-
 </android.support.constraint.ConstraintLayout>
